docs/errors/examples/math-domain-violation/math-domain-violation.grob
// E5006 — math.sqrt called with a negative argument (domain violation)
// Eventual path: docs/errors/examples/math-domain-violation/math-domain-violation.grob
print(math.sqrt(-4.0))
